# zibby-service

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.ps1  build.sh  readme.md  tz.md
.github/workflows/: build.yml  codeql.yml  release.yml
build-lint/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  compile_commands.json  version.h
build-lint/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
config/: config.json.example  zibby.service.example
docs/doxygen/: Doxyfile.in
docs/en/: Configuration.md  Development.md  Features.md  Installation.md  License.md  README.md  SecurityPolicy.md  Usage.md
docs/ru/: Configuration.md  Development.md  Features.md  Installation.md  License.md  README.md  ReleasePlan.md  SecurityPolicy.md  Usage.md
include/zibby/: version.h
installers/: README.md
scripts/: generate_checksums.ps1  generate_checksums.sh  install_deps_linux.sh  install_deps_windows.ps1  tui_menu.ps1  tui_menu.sh
src/: version.h.in
src/api/: api_protocol.h  api_server.cpp  api_server.h
src/cli/: cli.cpp  cli.h  commands.cpp  commands.h  tui.cpp  tui.h
src/core/: chat.cpp  chat.h  config.cpp  config.h  crypto.cpp  crypto.h  database.cpp  database.h  main.cpp  message.cpp  message.h  network.cpp  network.h  peer.h  profile.cpp  profile.h  service.cpp  service.h  update_checker.cpp  update_checker.h
src/media/: calls.cpp  calls.h  codecs.cpp  codecs.h  file_transfer.cpp  file_transfer.h
src/panel/: api_client.cpp  api_client.h  main.cpp  main_window.cpp  main_window.h  message_delegate.cpp  message_delegate.h  message_list_model.cpp  message_list_model.h  panel_entry.cpp  panel_entry.h  peer_delegate.cpp  peer_delegate.h  peer_list_model.cpp  peer_list_model.h
src/platform/linux/: README.md
src/platform/windows/: README.md  autostart.cpp  autostart.h  windows_service.cpp  windows_service.h  zibby_panel.rc.in  zibby_service.rc  zibby_service.rc.in
src/plugins/: plugin_interface.h  plugin_manager.cpp  plugin_manager.h
src/plugins/examples/: sample_plugin.cpp
src/tools/build_tui/: main.cpp
src/utils/: ansi.h  crash_handler.cpp  crash_handler.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h
tests/: CMakeLists.txt
tests/integration/: README.md
tests/unit/: README.md  api_server_test.cpp  message_flow_test.cpp  profile_peer_test.cpp
